force-app/main/default/objects/kt_checklist__Checklist__c/kt_checklist__Checklist__c.object-meta.xml
<CustomObject>
    <label>Checklist</label>
    <nameField>
        <displayFormat>C-{00}</displayFormat>
        <label>Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>