force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Checklist_Item_Checked_Count__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checklist_Item_Checked_Count__c</fullName>
    <label>Checklist Item Checked Count</label>
    <summaryFilterItems>
        <field>kt_checklist__Checklist_Item__c.kt_checklist__Checked__c</field>
        <operation>equals</operation>
        <value>Yes, Not Applicable</value>
    </summaryFilterItems>
    <summaryForeignKey>kt_checklist__Checklist_Item__c.kt_checklist__Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>