force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Checklist_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checklist_Item_Count__c</fullName>
    <label>Checklist Item Count</label>
    <summaryForeignKey>kt_checklist__Checklist_Item__c.kt_checklist__Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>