force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checklist_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Predefined Checklist Items are auto-generated if a Checklist Template is selected.</inlineHelpText>
    <label>Checklist Template</label>
    <referenceTo>kt_checklist__Checklist_Template__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>