force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Checklist_Title__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checklist_Title__c</fullName>
    <label>Checklist Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>