force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Contact__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>