force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Due_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)+kt_checklist__Due_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>