force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Is_Checklist_Locked__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Is_Checklist_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Checklist Locked</label>
    <type>Checkbox</type>
</CustomField>