force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Is_Checklist_Template_Locked__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Is_Checklist_Template_Locked__c</fullName>
    <formula>if(kt_checklist__Checklist_Template__c != null, kt_checklist__Checklist_Template__r.kt_checklist__IsLocked__c, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Checklist Template Locked</label>
    <type>Checkbox</type>
</CustomField>