force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Notify__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Notify__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to send a reminder before/after the due date</inlineHelpText>
    <label>Notify</label>
    <type>Checkbox</type>
</CustomField>