force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Parent_Link__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Parent_Link__c</fullName>
    <formula>SUBSTITUTE(
    SUBSTITUTE($Api.Partner_Server_URL_260, &quot;/services/Soap/u/26.0&quot;, &quot;&quot;),
    &quot;/&quot; &amp; $Organization.Id,
    &quot;&quot;
  ) &amp; &quot;/&quot; &amp; kt_checklist__ParentId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Link</label>
    <type>Text</type>
</CustomField>