force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__ParentId__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__ParentId__c</fullName>
    <label>ParentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>