force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Percentage_Completion__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Percentage_Completion__c</fullName>
    <formula>FLOOR(( kt_checklist__Checklist_Item_Checked_Count__c  /  kt_checklist__Checklist_Item_Count__c ) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>