force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Ready_For_Reminder__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Ready_For_Reminder__c</fullName>
    <formula>AND(
    kt_checklist__Notify__c = TRUE,
    kt_checklist__Percentage_Completion__c &lt; 100,
    kt_checklist__Reminder_Sent__c = FALSE,
    NOT(ISBLANK(kt_checklist__Due_Date__c)),
    NOT(ISBLANK(kt_checklist__Reminder_Offset__c)),
    TODAY() = (kt_checklist__Due_Date__c + kt_checklist__Reminder_Offset__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready For Reminder</label>
    <type>Checkbox</type>
</CustomField>