force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Related_To__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Related_To__c</fullName>
    <label>Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>