force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Related_To_Id__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Related_To_Id__c</fullName>
    <label>Related To Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>