force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Reminder_Offset__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Reminder_Offset__c</fullName>
    <description>Days before or after the due date to send the reminder.</description>
    <inlineHelpText>Negative = before due date, 0 = same day, Positive = after due date.</inlineHelpText>
    <label>Reminder Offset (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>