force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>