force-app/main/default/objects/kt_checklist__Checklist__c/fields/kt_checklist__Sequential__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Sequential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sequential</label>
    <type>Checkbox</type>
</CustomField>